# Synthetic-teaching-animation-of-simple-harmonic-motion

./: .gitignore  FINAL_PROJECT_STATUS.md  LICENSE  MODIFICATION_SUMMARY.md  PROJECT_ORGANIZATION_PLAN.md  PROJECT_README.md  README.md  debug_launcher.py  fix_steps.md  launcher.py  layout_diagram.py  requirements.txt  run_app.bat  test_l_layout.py  video_demo_launcher.py  教学视频台词稿.txt  教学视频解说词脚本.md
applications/shm_visualization/: .gitignore  build.bat  build_executable.py  build_final.py  build_fixed.py  build_simple.bat  pyproject.toml  requirements.txt  run.py  setup.py
applications/shm_visualization/docs/: BEAT_MAIN_FIX_SUMMARY.md  CRITICAL_ISSUES_RESOLVED.md  LEGEND_EXTERNAL_LAYOUT.md  PACKAGING_ISSUES_FIXED.md  PROJECT_REORGANIZATION_COMPLETE.md  PYINSTALLER_FIX_SUMMARY.md  UI_TEXT_OVERLAP_FIX_COMPLETE.md  VECTOR_DIAGRAM_SIMPLE_FIX.md  VECTOR_DIAGRAM_TEXT_SEPARATION_COMPLETE.md  VECTOR_DIAGRAM_UI_FIX_SUMMARY.md  syntax_fix_report.md
applications/shm_visualization/docs/dev/: BUILD_INSTRUCTIONS.md  FINAL_PACKAGING_COMPLETE.md  GUI_STARTUP_FIX.md  IMPORT_RESOLUTION_GUIDE.md  JARACO_FIX_SUMMARY.md  PACKAGING_SUMMARY.md  PYINSTALLER_FIX_GUIDE.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  STARTUP_FIX_SUMMARY.md  syntax_fix_report.md  test_report.md
applications/shm_visualization/release/: 使用说明.md  安装和使用指南.md  版本信息.txt  详细使用指南.md
applications/shm_visualization/src/: __init__.py
applications/shm_visualization/src/shm_visualization/: main.py
applications/shm_visualization/src/shm_visualization/animations/: __init__.py  beat_animation.py  orthogonal_animation.py
applications/shm_visualization/src/shm_visualization/modules/: __init__.py  beat_main.py  orthogonal_main.py  phase_main.py
applications/shm_visualization/src/shm_visualization/ui/: __init__.py  params_controller.py
applications/shm_visualization/tests/: __init__.py
applications/shm_visualization/tests/integration/: test_executable.py  test_fixed_app.py  test_gui_startup.py  test_packaged_app.py  test_packaged_navigation.py  test_reorganized_navigation.py  test_vector_diagram_fix.py
applications/shm_visualization/tests/unit/: test_beat_fix.py  test_launcher_navigation.py  test_module_navigation.py
audio_analysis/: README.md  audio_player.py  frequency_analyzer.py  requirements.txt
shm_visualization/: README.md  __init__.py  beat_animation.py  beat_main.py  orthogonal_animation.py  orthogonal_main.py  params_controller.py  phase_animation.py  phase_main.py  start.py  test_report.md  ui_framework.py
(+99 files in other folders)
